Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.2(EOL), 11.4, 11.6(EOL)
-
Can result in hang or crash
-
An issue is fixed which could result in server hangs when a replica internally scans its mysql.gtid_slave_pos table contents.
-
Q1/2026 Server Maintenance
Description
to reproduce run test with
--mysqld=--autocommit=off
|
|
|
--source include/have_innodb.inc
|
--let $rpl_topology=1->2
|
--source include/rpl_init.inc
|
|
|
--connection server_1
|
ALTER TABLE mysql.gtid_slave_pos ENGINE=InnoDB; |
--save_master_pos
|
|
|
--connection server_2
|
--sync_with_master
|
--source include/stop_slave.inc
|
|
|
--connection server_1
|
CREATE TABLE t1 (a INT); |
|
|
--connection server_2
|
--replace_result $MASTER_MYPORT MASTER_PORT
|
eval CHANGE MASTER TO master_host = '127.0.0.1', master_port = $MASTER_MYPORT, |
MASTER_USE_GTID=CURRENT_POS;
|
--source include/start_slave.inc
|
|
|
--connection server_2
|
--source include/sync_with_master_gtid.inc
|
|
|
--connection server_1
|
DROP TABLE t1; |
--source include/rpl_end.inc
|
|
|
|
|
10.3 41290e91b7be29ed72b8a41c7b6 |
/10.3/sql/sql_parse.cc:6047: int mysql_execute_command(THD*): Assertion `!thd->in_active_multi_stmt_transaction() || thd->in_multi_stmt_transaction_mode()' failed.
|
190913 15:38:38 [ERROR] mysqld got signal 6 ;
|
|
linux/raise.c:54(__GI_raise)[0x7f0c09f57428]
|
stdlib/abort.c:91(__GI_abort)[0x7f0c09f5902a]
|
assert/assert.c:92(__assert_fail_base)[0x7f0c09f4fbd7]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f0c09f4fc82]
|
sql/sql_parse.cc:6046(mysql_execute_command(THD*))[0x55653667c734]
|
sql/sql_parse.cc:7830(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x556536681b87]
|
sql/log_event.cc:5682(Query_log_event::do_apply_event(rpl_group_info*, char const*, unsigned int))[0x556536ae5a94]
|
sql/log_event.cc:5358(Query_log_event::do_apply_event(rpl_group_info*))[0x556536ae495d]
|
sql/log_event.h:1482(Log_event::apply_event(rpl_group_info*))[0x556536587c31]
|
sql/slave.cc:3911(apply_event_and_update_pos_apply(Log_event*, THD*, rpl_group_info*, int))[0x55653657aed7]
|
sql/slave.cc:4060(apply_event_and_update_pos(Log_event*, THD*, rpl_group_info*))[0x55653657b42e]
|
sql/slave.cc:4359(exec_relay_log_event(THD*, Relay_log_info*, rpl_group_info*))[0x55653657bdaf]
|
sql/slave.cc:5522(handle_slave_sql)[0x55653657f71b]
|
perfschema/pfs.cc:1864(pfs_spawn_thread)[0x5565371c51fc]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f0c0ab946ba]
|
x86_64/clone.S:111(clone)[0x7f0c0a02941d]
|
|
Query (0x7f0ba001b9eb): CREATE TABLE t1 (a INT)
|
Attachments
Issue Links
- relates to
-
MDEV-36976 Assertion `!thd->in_active_multi_stmt_transaction() || thd->in_multi_stmt_transaction_mode()' failed in mysql_execute_command, mariadb-binlog output differences between versions
-
- Confirmed
-